# containers

./: .editorconfig  .gitignore  .travis.yml  README.md  containers.html  dub.json  dub.sdl  emsi_containers.lib  gen_docs.sh  index.ddoc  index_content.html  meson.build  search.js  simd_set.SimdSet.contains.html  simd_set.SimdSet.html  simd_set.SimdSet.insert.html  simd_set.SimdSet.length.html  simd_set.html  style.css  test.a.html  test.b.html  test.html  toc.html
.github/workflows/: CI.yml
containers/: cyclicbuffer.CyclicBuffer.capacity.html  cyclicbuffer.CyclicBuffer.empty.html  cyclicbuffer.CyclicBuffer.front.html  cyclicbuffer.CyclicBuffer.html  cyclicbuffer.CyclicBuffer.insert.html  cyclicbuffer.CyclicBuffer.insertBack.html  cyclicbuffer.CyclicBuffer.insertFront.html  cyclicbuffer.CyclicBuffer.opDollar.html  cyclicbuffer.CyclicBuffer.removeBack.html  cyclicbuffer.CyclicBuffer.this.html  dynamicarray.DynamicArray.back.html  dynamicarray.DynamicArray.front.html  dynamicarray.DynamicArray.html  dynamicarray.DynamicArray.insert.html  dynamicarray.DynamicArray.insert1143.html  dynamicarray.DynamicArray.length.html  dynamicarray.DynamicArray.length2140.html  dynamicarray.DynamicArray.opBinary.html  dynamicarray.DynamicArray.opDollar.html  dynamicarray.DynamicArray.opIndex.html  dynamicarray.DynamicArray.opIndex1030.html  dynamicarray.DynamicArray.opIndexAssign.html  dynamicarray.DynamicArray.opIndexAssign1848.html  dynamicarray.DynamicArray.opOpAssign.html  dynamicarray.DynamicArray.opSlice.html  dynamicarray.DynamicArray.opSlice886.html  dynamicarray.DynamicArray.opSlice941.html  dynamicarray.DynamicArray.opSliceAssign.html  dynamicarray.DynamicArray.opSliceAssign1942.html  dynamicarray.DynamicArray.opSliceAssign2012.html  dynamicarray.DynamicArray.ptr.html  dynamicarray.DynamicArray.put.html  dynamicarray.DynamicArray.remove.html  dynamicarray.DynamicArray.this.html  dynamicarray.html  hashmap.HashMap.empty.html  hashmap.HashMap.generateHash6765.html  hashmap.HashMap.html  hashmap.HashMap.keys.html  hashmap.HashMap.keys2665.html  (+192 more)
containers/internal/: backwards.bsf.html  element_type.html  hash.hashString.html  hash.hashString162.html  hash.html  mixins.html  node.html  storage_type.ContainerStorageType.html  storage_type.html
doc-src/: index.ddoc
docs/: index.html  search.js  toc.html
docs/containers/: cyclicbuffer.CyclicBuffer.back.html  cyclicbuffer.CyclicBuffer.clear.html  cyclicbuffer.CyclicBuffer.html  cyclicbuffer.CyclicBuffer.insertAnywhere.html  cyclicbuffer.CyclicBuffer.length.html  cyclicbuffer.CyclicBuffer.opIndex.html  cyclicbuffer.CyclicBuffer.opSlice.html  cyclicbuffer.CyclicBuffer.popBack.html  cyclicbuffer.CyclicBuffer.popFront.html  cyclicbuffer.CyclicBuffer.put.html  cyclicbuffer.CyclicBuffer.removeFront.html  cyclicbuffer.CyclicBuffer.reserve.html  cyclicbuffer.html  dynamicarray.DynamicArray.AppendT.html  dynamicarray.DynamicArray.AppendTypeOfThis.html  dynamicarray.DynamicArray.empty.html  dynamicarray.DynamicArray.html  dynamicarray.DynamicArray.insert.html  dynamicarray.DynamicArray.insertAnywhere.html  dynamicarray.DynamicArray.insertBack.html  (+114 more)
memory/: allocators.BlockAllocator.Node.html  allocators.BlockAllocator.allocate.html  allocators.BlockAllocator.allocate2347.html  allocators.BlockAllocator.allocateInNode.html  allocators.BlockAllocator.allocateInNode3978.html  allocators.BlockAllocator.allocateNewNode.html  allocators.BlockAllocator.allocateNewNode3663.html  allocators.BlockAllocator.html  allocators.BlockAllocator.root.html  allocators.BlockAllocator.roundUpToMultipleOf.html  allocators.BlockAllocator.roundUpToMultipleOf4572.html  allocators.NodeAllocator.html  allocators.QuickAllocator.html  allocators.html  appender.Appender.append.html  appender.Appender.append745.html  appender.Appender.html  appender.Appender.opSlice.html  appender.Appender.opSlice644.html  appender.Appender.this.html  appender.html
std/: allocator.AffixAllocator.alignment.html  allocator.AffixAllocator.allocate39161.html  allocator.AffixAllocator.deallocate39440.html  allocator.AffixAllocator.deallocateAll39506.html  allocator.AffixAllocator.expand39281.html  allocator.AffixAllocator.goodAllocSize39086.html  allocator.AffixAllocator.html  allocator.AffixAllocator.it.html  allocator.AffixAllocator.owns39223.html  allocator.AffixAllocator.prefix40058.html  allocator.AffixAllocator.reallocate39361.html  allocator.AffixAllocator.suffix40120.html  allocator.AlignedMallocator.alignment.html  allocator.AlignedMallocator.allocate28889.html  allocator.AlignedMallocator.html  allocator.AlignedMallocator.it.html  allocator.AllocatorWithStats.AllocationInfo.callerFile111106.html  allocator.AllocatorWithStats.AllocationInfo.callerFunction111244.html  allocator.AllocatorWithStats.AllocationInfo.callerLine111175.html  allocator.AllocatorWithStats.AllocationInfo.callerModule111033.html  allocator.AllocatorWithStats.AllocationInfo.callerSize110962.html  allocator.AllocatorWithStats.AllocationInfo.callerTime111327.html  allocator.AllocatorWithStats.AllocationInfo.html  allocator.AllocatorWithStats.bytesAllocated109597.html  allocator.AllocatorWithStats.bytesContracted109796.html  allocator.AllocatorWithStats.bytesDeallocated109663.html  allocator.AllocatorWithStats.bytesExpanded109731.html  allocator.AllocatorWithStats.bytesHighTide109987.html  allocator.AllocatorWithStats.bytesMoved109863.html  allocator.AllocatorWithStats.bytesSlack109925.html  allocator.AllocatorWithStats.html  allocator.AllocatorWithStats.numAllocate109008.html  allocator.AllocatorWithStats.numAllocateOK109071.html  allocator.AllocatorWithStats.numDeallocate109464.html  allocator.AllocatorWithStats.numDeallocateAll109529.html  allocator.AllocatorWithStats.numExpand109136.html  allocator.AllocatorWithStats.numExpandOK109197.html  allocator.AllocatorWithStats.numOwns108949.html  allocator.AllocatorWithStats.numReallocate109260.html  allocator.AllocatorWithStats.numReallocateInPlace109392.html  (+139 more)
test/: Makefile  compile_test.d  external_allocator_test.d  hashmap_gc_test.d  looptest.d  makefile
(+35 files in other folders)
